--- a/Web/dashboard/src/index.css
+++ b/Web/dashboard/src/index.css
@@ -9,25 +9,24 @@ body {
 li {
   list-style-type: none;
 }
-::-webkit-scrollbar {
-  width: 3px;
-  opacity: 0.5;
-}
 
-/* Track */
-::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #d7d7d7;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background-color: #999;
-}
 body {
   overflow-x: hidden;
+  font-family: "Nunito", sans-serif;
+  font-size: 0.8rem;
+  font-weight: 400;
+}
+body::-webkit-scrollbar {
+  width: 10px;
+  opacity: 0.5;
+}
+body::-webkit-scrollbar-track {
+  background: transparent;
+}
+body::-webkit-scrollbar-thumb {
+  background: #b9b8b8;
+  border-radius: 12px;
+}
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #999;
 }
