--- a/Web/dashboard/src/ui/components/dashboard-comp/FooterComp/FooterComp.scss
+++ b/Web/dashboard/src/ui/components/dashboard-comp/FooterComp/FooterComp.scss
@@ -14,6 +14,9 @@
   }
   .left {
     float: left;
+    .left-footer-item {
+      color: #909090;
+    }
   }
   .right {
     float: right;
@@ -22,6 +25,13 @@
     }
     .right-footer-item {
       padding-left: 0.5rem;
+      a {
+        color: #6f4e37;
+        cursor: pointer;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
   }
 }
