--- a/Web/dashboard/src/ui/components/dashboard-comp/SideBarComp/SideBarComp.scss
+++ b/Web/dashboard/src/ui/components/dashboard-comp/SideBarComp/SideBarComp.scss
@@ -1,53 +1,138 @@
 #vertical-sidebar {
-  height: 100%;
-  background-color: #fff;
-  margin-top: 20px;
-  border-right: 1px solid #f1e8e8;
-  box-shadow: 0px 5px 5px #737272;
-  border-radius: 0 0.75rem 0.75rem 0;
-
-  transition: all 0.5s ease;
-  float: left;
   position: fixed;
   top: 71px;
-  z-index: 300;
-  width: 120px;
-
-  .tabs {
-    overflow: auto;
-    height: 100%;
-    li {
-      padding: 50px 0;
-      text-align: center;
-      border-bottom: 1px solid #f1dcdc;
-      position: relative;
-      cursor: pointer;
-      // &:hover {
-      //   overflow-y: overlay;
-      // }
-      &:focus-visible {
+  bottom: 0;
+  margin-top: 20px;
+  z-index: 4;
+  height: 100%;
+  transition: border-radius 0.3s;
+  .main-vertical-menu {
+    width: 120px;
+    height: calc(100% - 90px);
+    background: #fff;
+    z-index: 3;
+    position: fixed;
+    transition: transform 0.3s;
+    padding: 10px 0;
+    left: 0;
+    overflow: hidden;
+    &::-webkit-scrollbar {
+      width: 4px !important;
+      opacity: 0.5 !important;
+    }
+    &::-webkit-scrollbar-track {
+      background-color: transparent !important;
+    }
+    &::-webkit-scrollbar-thumb {
+      background: #e6e1e1 !important;
+      border-radius: 12px !important;
+    }
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: #999 !important;
+    }
+    &:hover {
+      overflow-y: overlay;
+    }
+    .main-ul {
+      .active {
+        &::after {
+          content: "";
+          position: absolute;
+          left: 0;
+          top: 50%;
+          transform: translateY(-50%);
+          width: 6px;
+          height: 90px;
+          background-color: #6f4e37;
+          border-radius: 12px;
+        }
         color: #6f4e37;
+      }
+      li {
+        text-align: center;
+        display: block;
+        padding: 40px 0;
+        border-bottom: 1px solid #f3f3f3;
+        transition: 0.3s ease;
+        cursor: pointer;
+        position: relative;
+        &:hover {
+          color: #6f4e37;
+        }
       }
     }
   }
-  .sub-menu {
-    position: fixed;
+  .border-radius-toggle {
+    border-radius: 0 0.75rem 0.75rem 0;
+  }
+  .sub-vertical-menu {
     width: 230px;
-    left: 124px;
-    height: 100vh;
-    z-index: 300;
-    top: 90px;
-    background-color: #fff;
-    display: none;
-    border-radius: 10px;
-    box-shadow: 0px 5px 5px #737272;
-    li {
-      padding: 16px 20px;
+    background: #fff;
+    z-index: 2;
+    position: fixed;
+    left: 120px;
+    border-left: 1px solid #f3f3f3;
+    box-shadow: 0 3px 30px rgba(0, 0, 0, 0.1), 0 3px 20px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+    height: calc(100% - 90px);
+    padding: 20px 8px;
+    overflow: hidden;
+    border-radius: 0 0.75rem 0.75rem 0;
+    &::-webkit-scrollbar {
+      width: 4px !important;
+      opacity: 0.5 !important;
+    }
+    &::-webkit-scrollbar-track {
+      background-color: transparent !important;
+    }
+    &::-webkit-scrollbar-thumb {
+      background: #e6e1e1 !important;
+      border-radius: 12px !important;
+    }
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: #999 !important;
+    }
+    &:hover {
+      overflow-y: overlay;
+    }
+    .sub-ul {
+      li {
+        text-align: left;
+        padding-left: 25px;
+        display: block;
+        padding: 8px 0;
+        transition: 0.3s ease;
+        cursor: pointer;
+        &:hover {
+          color: #6f4e37 !important;
+        }
+      }
+    }
+    .ul-toggle {
+      li {
+        color: rgb(207, 196, 196) !important;
+        a {
+        }
+        .ul-child-dropdown {
+          display: block;
+          margin: 3px 0;
+          li {
+            padding-left: 0;
+            color: #000 !important;
+            &:hover {
+              color: #6f4e37 !important;
+            }
+          }
+        }
+      }
     }
   }
-}
-@media (max-width: 1439px) {
-  #vertical-sidebar {
-    width: 110px;
+
+  .display-none {
+    transform: translateX(-230px);
   }
+
+  // .display-show {
+  //   transform: translateX(0px);
+  // }
 }
