--- a/Web/dashboard/src/ui/components/dashboard-comp/ThemeColorBoxComp/ThemeColorBoxComp.scss
+++ b/Web/dashboard/src/ui/components/dashboard-comp/ThemeColorBoxComp/ThemeColorBoxComp.scss
@@ -9,6 +9,7 @@
   box-shadow: 0 1px 15px rgba(0, 0, 0, 0.04), 0 1px 6px rgba(0, 0, 0, 0.04);
   padding: 10px 22px;
   transform: translate(280px, -50%);
+  transition: transform 0.4s ease-out;
   .color-theme-row {
     margin: 2rem 0;
     .theme-color-title {
