--- a/Web/dashboard/src/ui/components/dashboard-comp/MainDashBoard/MainDashBoard.scss
+++ b/Web/dashboard/src/ui/components/dashboard-comp/MainDashBoard/MainDashBoard.scss
@@ -106,26 +106,30 @@
         border-top-right-radius: 0.75rem;
       }
     }
-    .relative-card {
-      position: relative;
+    // .relative-card {
+    //   position: relative;
+    // }
+    .advanced-search-card {
+      height: 650px;
+      background: url(../../../../img/chocolate-coconut-frappe.jpg);
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-color: #fff;
     }
     .h-100 {
       height: 100%;
     }
     .advanced-search-form {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 200;
-      padding: 20px 30px;
-      background-color: #fff;
-      border-radius: 4px;
+      height: 400px;
+      border-radius: 0.1rem;
       box-shadow: 0 -10px 15px 0 rgba(0, 0, 0, 0.04);
+      padding: 2rem;
+      background-color: #fff;
       .form-group,
       .form-check {
         margin: 18px 0;
         .input-form {
+          width: 100%;
           margin-top: 10px;
           align-items: center;
           background-color: rgb(255, 255, 255);
@@ -136,7 +140,7 @@
           cursor: default;
           display: flex;
           flex-wrap: wrap;
-          justify-content: space-between;
+          justify-content: center;
           min-height: 38px;
           position: relative;
           transition: all 100ms ease 0s;
@@ -221,6 +225,14 @@
       background-color: #ffffff;
       border-radius: 0.75rem;
       box-shadow: 9px 30px 44px rgba(65, 64, 64, 0.04);
+      .advanced-search-body {
+        padding: 80px 30px 30px !important;
+        .advanced-search-title {
+          margin-bottom: 1.5rem;
+          color: #fff;
+          font-size: 1.1rem;
+        }
+      }
       .card-body {
         padding: 1.75rem;
         .card-title {
