--- a/Web/dashboard/src/ui/components/dashboard-comp/MainDashBoard/MainDashBoard.scss
+++ b/Web/dashboard/src/ui/components/dashboard-comp/MainDashBoard/MainDashBoard.scss
@@ -244,6 +244,21 @@
           font-size: 1.1rem;
         }
       }
+      .txt-align-center {
+        text-align: center;
+      }
+      .value-total {
+        font-size: 1.4rem;
+        color: #6f4e37;
+        font-weight: 300;
+        line-height: 2rem;
+        margin-bottom: 0.25rem !important;
+      }
+      .value-name {
+        font-size: 0.76rem;
+        line-height: 0.9rem;
+        margin-bottom: 0 !important;
+      }
       .card-body {
         padding: 1.75rem;
         .card-title {
