--- a/Web/dashboard/src/ui/components/dashboard-comp/MainDashBoard/MainDashBoard.scss
+++ b/Web/dashboard/src/ui/components/dashboard-comp/MainDashBoard/MainDashBoard.scss
@@ -18,6 +18,9 @@
     li {
       display: inline;
     }
+    h1 {
+      font-size: 1.75rem;
+    }
     ul {
       margin-left: 20px;
     }
@@ -555,6 +558,9 @@
             flex-wrap: nowrap;
             .order-info {
               margin-left: 20px;
+              h3 {
+                font-size: 1rem;
+              }
               &:hover h3 {
                 color: #6f4e37;
                 transition: all 0.3s ease-in;
@@ -581,7 +587,7 @@
             overflow-y: overlay;
           }
           li {
-            padding: 10px 0;
+            padding: 8px 0;
           }
           table {
             width: 100%;
@@ -600,6 +606,7 @@
             }
             p {
               display: inline-block;
+              margin-bottom: 3px !important;
             }
           }
           .text-right {
@@ -770,12 +777,14 @@
         }
       }
     }
+    .card-row-4 {
+      height: 385px;
+    }
     .banner {
       background-color: #6f4e37;
       justify-content: flex-end;
       text-align: left;
-      height: 100%;
-      padding-top: 256px;
+      padding-top: 164px;
       cursor: pointer;
       transition: background-color 0.3s;
       &:hover {
