--- a/Web/login-page/src/ui/components/login-comp/NavSmallDeviceComp/NavSmallDeviceComp.scss
+++ b/Web/login-page/src/ui/components/login-comp/NavSmallDeviceComp/NavSmallDeviceComp.scss
@@ -1,5 +1,4 @@
 #nav-widget-small-device {
-  display: none;
   position: fixed;
   left: 0;
   top: 0;
@@ -9,38 +8,45 @@
   width: 300px;
   padding-bottom: 40px;
   padding-top: 0;
-  overflow: hidden;
-  &::-webkit-scrollbar {
-    transition: all 0.5s ease;
-    width: 5px;
-    border-radius: 12px;
-    opacity: 0.5;
+  overflow: auto;
+  color: rgba(0, 0, 0, 0);
+
+  &:hover {
+    color: rgba(122, 98, 98, 0.3);
   }
-  &::-webkit-scrollbar-track {
-    background: transparent;
+  &::-webkit-scrollbar,
+  ::-webkit-scrollbar-thumb {
+    width: 8px;
   }
   &::-webkit-scrollbar-thumb {
-    background: rgba(182, 179, 179, 0.822);
-  }
-  &::-webkit-scrollbar-thumb:hover {
-    background-color: #808080;
-    opacity: 1;
-  }
-  &:hover {
-    overflow-y: overlay;
+    box-shadow: inset 0 0 0 10px;
+    border-radius: 13px;
+    &:hover {
+      color: rgba(75, 61, 61, 0.3);
+    }
   }
   .close-arrow-button {
     width: 100%;
-    text-align: right;
     padding: 10px 12px 10px 0;
     margin-bottom: 5rem;
     button {
       background: transparent;
       outline: none;
       border: none;
+      float: right;
+      border-radius: 15px;
+      transition: all 0.3s ease-in;
+      &:hover {
+        padding-right: 15px;
+      }
+      &:hover > .arrow-left-icon {
+        transform: scale(1.5) !important;
+        color: #e22222;
+      }
       .arrow-left-icon {
         font-size: 14px;
         color: #070756;
+        transition: all 0.3s ease-in;
       }
     }
   }
@@ -129,3 +135,12 @@
   z-index: 2;
   display: none;
 }
+.disappear {
+  transition: all 0.5s ease;
+  transform: translateX(-300px);
+}
+
+// .appear {
+//   transition: all 0.5s ease;
+//   transform: translateX(0px);
+// }
