--- a/Web/login-page/src/ui/components/login-comp/NavSmallDeviceComp/NavSmallDeviceComp.scss
+++ b/Web/login-page/src/ui/components/login-comp/NavSmallDeviceComp/NavSmallDeviceComp.scss
@@ -133,7 +133,8 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 2;
-  display: none;
+  opacity: 0;
+  transition: all 0.5s;
 }
 .disappear {
   transition: all 0.5s ease;
